fixed dark mode button on map page

--- a/mapStyles.css
+++ b/mapStyles.css
@@ -92,11 +92,11 @@ body{
 .dark-mode a {
     color: lightblue; 
 }
-.dark-mode #clickMe {
+.dark-mode button, .dark-mode #clickMe {
     background-color: #333;
     color: white;
 }
-.dark-mode #clickMe:hover {
+.dark-mode #clickMe:hover, .dark-mode button:hover {
     background-color: #444444;
     
 }
